--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/PrismarineJS/prismarine-web-client.git"
+    "url": "git+https://github.com/connor33341/pvpclient.connor33341.dev.git"
   },
   "keywords": [
     "prismarine",
@@ -35,6 +35,7 @@
   },
   "homepage": "https://github.com/PrismarineJS/prismarine-web-client#readme",
   "dependencies": {
+    "canvas": "^3.1.0",
     "compression": "^1.7.4",
     "express": "^4.17.1",
     "ismobilejs": "^1.1.1",
@@ -44,36 +45,37 @@
     "url": "^0.11.0"
   },
   "devDependencies": {
-    "assert": "^2.0.0",
+    "assert": "^2.1.0",
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
     "clean-webpack-plugin": "^4.0.0",
     "constants-browserify": "^1.0.0",
-    "copy-webpack-plugin": "^11.0.0",
+    "copy-webpack-plugin": "^12.0.2",
     "crypto-browserify": "^3.12.0",
-    "events": "^3.2.0",
-    "html-webpack-plugin": "^5.3.1",
+    "events": "^3.3.0",
+    "html-webpack-plugin": "^5.6.0",
     "http-browserify": "^1.7.0",
-    "http-server": "^14.1.0",
+    "http-server": "^14.1.1",
     "https-browserify": "^1.0.0",
     "lodash-webpack-plugin": "^0.11.6",
-    "memfs": "^3.2.0",
-    "mineflayer": "^4.17.0",
-    "mineflayer-pathfinder": "^2.0.0",
-    "mocha": "^10.0.0",
+    "memfs": "^4.9.3",
+    "mineflayer": "^4.20.1",
+    "mineflayer-pathfinder": "^2.4.5",
+    "mocha": "^10.4.0",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "prismarine-viewer": "^1.28.0",
     "process": "PrismarineJS/node-process",
-    "standard": "^17.0.0",
+    "standard": "^17.1.0",
     "stream-browserify": "^3.0.0",
-    "three": "0.127.0",
+    "three": "0.162.0",
     "timers-browserify": "^2.0.12",
-    "webpack": "^5.11.0",
-    "webpack-cli": "^5.0.0",
-    "webpack-dev-middleware": "^6.0.0",
-    "webpack-dev-server": "^4.0.0",
-    "webpack-merge": "^5.7.3",
-    "workbox-webpack-plugin": "^6.1.2"
+    "vm-browserify": "^1.1.2",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-middleware": "^7.2.1",
+    "webpack-dev-server": "^5.0.4",
+    "webpack-merge": "^5.10.0",
+    "workbox-webpack-plugin": "^7.0.0"
   }
 }
